--- a/styles.css
+++ b/styles.css
@@ -4,26 +4,80 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: contralto-big, sans-serif;
+	background-color: #121212;
+	color: #f9f9f9;
+	min-height: 200vh;
 }
-
+main {
+	padding-top: 75px;
+}
 a {
 	font-family: contralto-big, sans-serif;
 	text-decoration: none;
-	color: #121212;
+	color: #f9f9f9;
 }
-
+h1 {
+	font-variant: small-caps;
+	font-size: 5rem;
+}
 header {
-	width: 50%;
-	display: flex;
+	position: fixed;
+	z-index: 1000;
+	width: 100vw;
+	height: 80px;
+	background-color: rgba(32, 32, 32, 0.97);
+	margin: 0;
+	padding-top: 0.5rem;
 }
 nav ul {
 	display: flex;
-	justify-content: space-between;
 	list-style: none;
+	justify-content: space-around;
+	align-items: center;
+	padding: 0;
+	margin: 0;
+	width: 40vw;
+}
+nav img {
+	width: 10vw;
+}
+nav a {
+	font-variant: small-caps;
+	font-size: 1.2rem;
+	letter-spacing: 0.2rem;
 }
 nav a:visited {
-	color: #121212;
+	color: #f9f9f9;
 }
-#logo {
-	width: 25%;
+nav a:hover {
+	color: #f7e41a;
+	text-shadow: 2px 2px 2px #a625c7;
+}
+#homehead {
+	height: 65vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+video {
+	object-fit:cover;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top:0;
+	left: 0;
+	filter: blur(10px);
+}
+#video-wrapper {
+	position: relative;
+	width: 100vw;
+	height: 120vh;
+	overflow: hidden;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#hometext {
+	position: relative;
 }
