--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ body {
 	color: #f9f9f9;
 	min-height: 200vh;
 }
-main {
+/* main {
 	padding-top: 75px;
-}
+} */
 a {
 	font-family: contralto-big, sans-serif;
 	text-decoration: none;
@@ -20,6 +20,7 @@ h1 {
 	font-variant: small-caps;
 	font-size: 5rem;
 }
+
 header {
 	position: fixed;
 	z-index: 1000;
@@ -43,35 +44,36 @@ nav img {
 }
 nav a {
 	font-variant: small-caps;
-	font-size: 1.2rem;
+	font-size: 1.3rem;
 	letter-spacing: 0.2rem;
+	font-weight: 600;
 }
 nav a:visited {
 	color: #f9f9f9;
 }
 nav a:hover {
 	color: #f7e41a;
-	text-shadow: 2px 2px 2px #a625c7;
+	text-shadow: 0px 0px 20px #a625c7;
 }
 #homehead {
-	height: 65vh;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 video {
-	object-fit:cover;
+	object-fit: cover;
 	height: 100%;
 	width: 100%;
 	position: absolute;
-	top:0;
+	top: 0;
 	left: 0;
 	filter: blur(10px);
 }
 #video-wrapper {
 	position: relative;
 	width: 100vw;
-	height: 120vh;
+	height: 100%;
 	overflow: hidden;
 	text-align: center;
 	display: flex;
@@ -80,4 +82,62 @@ video {
 }
 #hometext {
 	position: relative;
+}
+#h-latest {
+	font-variant: small-caps;
+	font-size: 3rem;
+	margin: 50px 0 0 0vw;
+	text-align: center;
+	letter-spacing: 2px;
+	font-size: 3.5em;
+}
+.blog {
+	background-color: rgba(32, 32, 32, 0.6);
+	margin-left: 5vw;
+	margin-top: 50px;
+	width: 65vw;
+}
+article {
+	width: 90%;
+	margin: auto;
+	padding-top: 1rem;
+	padding-bottom: 1.5rem;
+	flex-wrap: wrap;
+	font-size: 18px;
+	letter-spacing: 1px;
+	font-weight: 200;
+}
+article h2 {
+	font-variant: small-caps;
+	font-size: 3rem;
+	margin: 0;
+	text-shadow: 0px 0px 5px #f7e41a, 0px 0px 10px #a625c7;
+}
+article ol,
+article p,
+article ul {
+	line-height: 1.6em;
+}
+article ol>li {
+	margin-top: 1em;
+}
+article ol {
+	width: 60%;
+}
+article span {
+	color: #f7e41a;
+}
+#typohead {
+	width: 100%;
+	margin-top: 1.5rem;
+}
+.olist {
+	display: flex;
+	justify-content: space-around;
+}
+aside {
+	margin-top: 1rem;
+}
+aside a:hover {
+	color: #f7e41a;
 }
