--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,6 @@ body {
 	color: #f9f9f9;
 	min-height: 200vh;
 }
-/* main {
-	padding-top: 75px;
-} */
 a {
 	font-family: contralto-big, sans-serif;
 	text-decoration: none;
@@ -53,7 +50,6 @@ nav a:visited {
 }
 nav a:hover {
 	color: #f7e41a;
-	text-shadow: 0px 0px 20px #a625c7;
 }
 #homehead {
 	height: 100vh;
@@ -117,6 +113,11 @@ article ol,
 article p,
 article ul {
 	line-height: 1.6em;
+}
+article p {
+	width: 95%;
+	margin-left: auto;
+	margin-right: auto;
 }
 article ol>li {
 	margin-top: 1em;
