--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 	background-color: #000000;
 	color: #f9f9f9;
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 a {
 	font-family: contralto-big, sans-serif;
@@ -28,7 +29,7 @@ header {
 	align-items: center;
 	position: fixed;
 	z-index: 1000;
-	width: 99vw;
+	width: 100vw;
 	height: 10vh;
 	background-color: rgba(32, 32, 32, 0.97);
 	margin: 0;
@@ -77,7 +78,7 @@ video {
 }
 #video-wrapper {
 	position: relative;
-	width: 99vw;
+	width: 100vw;
 	height: 100%;
 	overflow: hidden;
 	text-align: center;
