--- a/styles.css
+++ b/styles.css
@@ -118,10 +118,19 @@ article {
 article h2 {
 	font-variant: small-caps;
 	font-size: 3rem;
+	position: absolute;
+	bottom: 8px;
+	left: 16px;
 	margin: 0;
 	text-shadow: 0px 0px 5px #f7e41a, 0px 0px 10px #a625c7;
 	font-family: fino-sans;
 	letter-spacing: 5px;
+}
+.img-container{
+	position: relative;
+}
+.img-container img {
+	filter: saturate(0.5);
 }
 article h3 {
 	margin: 0 20px;
@@ -154,11 +163,6 @@ article span {
 	width: 100%;
 	margin-top: 1.5rem;
 }
-/* .olist {
-	display: flex;
-	justify-content: space-around;
-	margin-top: 2em;
-} */
 article aside {
 	float: right;
 	height: fit-content;
