--- a/styles.css
+++ b/styles.css
@@ -101,14 +101,13 @@ video {
 }
 .blog {
 	background-color: rgba(32, 32, 32, 0.6);
-	/* margin-left: 5vw; */
 	margin-top: 50px;
 	width: 60vw;
 }
 article {
 	width: 90%;
 	margin: auto;
-	padding-top: 3rem;
+	padding-top: 2rem;
 	padding-bottom: 1.5rem;
 	flex-wrap: wrap;
 	font-size: 18px;
@@ -117,20 +116,18 @@ article {
 }
 article h2 {
 	font-variant: small-caps;
-	font-size: 3rem;
+	font-size: 4rem;
 	position: absolute;
 	bottom: 8px;
 	left: 16px;
 	margin: 0;
-	text-shadow: 0px 0px 5px #f7e41a, 0px 0px 10px #a625c7;
+	text-shadow: 0px 0px 5px #f7e41a, 0px 0px 10px #a625c7, 0px 0px 15px #f9f9f9;
 	font-family: fino-sans;
 	letter-spacing: 5px;
 }
-.img-container{
+.img-container {
+	margin-top: 0;
 	position: relative;
-}
-.img-container img {
-	filter: saturate(0.5);
 }
 article h3 {
 	margin: 0 20px;
@@ -161,7 +158,7 @@ article span {
 }
 #typohead {
 	width: 100%;
-	margin-top: 1.5rem;
+	margin-top: 1rem;
 }
 article aside {
 	float: right;
@@ -272,7 +269,7 @@ footer a:hover {
 		font-size: 3.5rem;
 	}
 	article h2 {
-		font-size: 2.5rem;
+		font-size: 3.5rem;
 	}
 	.blog {
 		width: 90vw;
