--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ article h2 {
 	bottom: 8px;
 	left: 16px;
 	margin: 0;
-	text-shadow: 0px 0px 5px #f7e41a, 0px 0px 10px #a625c7, 0px 0px 15px #f9f9f9;
+	text-shadow: 0px 0px 30px #000000;
 	font-family: fino-sans;
 	letter-spacing: 5px;
 }
